--- a/index.html
+++ b/index.html
@@ -117,8 +117,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </div>
       <div class="col-md-6">
         <h4>EntreComp Interactive</h4>
-        Interactive version of EntreComp framework is created by <a target="_blank" href="https://www.linkedin.com/in/joongseob-kim">Joongseob Kim</a>.
-        It has developed as a part of the entrepreneurial internship project at <a target="_blank" href="https://www.starthubwageningen.nl/">StartHub Wageningen</a>.
+        Interactive version of EntreComp framework is created by <a target="_blank" href="https://www.linkedin.com/in/joongseob-kim" title="Joongseob Kim - LinkedIn">Joongseob Kim</a>.
+        It has developed as a part of the entrepreneurial internship project at <a target="_blank" href="https://www.starthubwageningen.nl/" title="Starthub Wageningen">StartHub Wageningen</a>.
+        <br>
+        <h4>Report</h4>
+        <a href="https://github.com/dorajistyle/EntreComp/raw/main/Joongseob_Kim_Starthub_Internship_Report_EntreComp.pdf" target="_blank" title="Download Internship Report"><span class="material-icons">description</span> Download the internship report</a>
       </div>
     </div>
   </div>
